--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "fabric-common-chaincode",
-  "version": "1.2.0",
-  "author": "davidliu",
+  "version": "1.3.0",
+  "author": "davidliu  <david-khala@hotmail.com>",
+  "repository": "davidkhala/fabric-common-chaincode-node",
+  "license": "Apache-2.0",
   "dependencies": {
-    "fabric-shim": "^1.2.0"
+    "fabric-shim": "^1.3.2"
   }
 }
