--- a/contract-api/package.json
+++ b/contract-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "khala-contract-api",
+  "name": "khala-fabric-contract-api",
   "version": "1.4.2-0.0.0",
   "author": "davidliu  <david-khala@hotmail.com>",
   "repository": "davidkhala/fabric-common-chaincode-node",
