--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "fabric-common-chaincode",
   "version": "1.4.4-0.1.1",
   "author": "davidliu  <david-khala@hotmail.com>",
-  "repository": "davidkhala/fabric-common-chaincode-node",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/davidkhala/fabric-common-chaincode-node.git"
+  },
   "license": "Apache-2.0",
   "dependencies": {
     "fabric-shim": "^1.4.4"
