nodejs chaincode do not suffer from >100 iterator size limit [DONE] parseHistory

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fabric-common-chaincode",
-  "version": "1.4.4-0.1.12",
+  "version": "1.4.4-0.1.15",
   "author": "davidliu  <david-khala@hotmail.com>",
   "repository": {
     "type": "git",
@@ -9,5 +9,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "fabric-shim": "^1.4.4"
+  },
+  "devDependencies": {
   }
 }
