[WIP] update to 1.4.5 [TODO] fabric-ca-client 1.4.5, 1.4.6 is not read to use [DONE] migrate to use axios

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fabric-common-chaincode",
-  "version": "1.4.4-0.1.15",
+  "version": "1.4.5-0.0.0",
   "author": "davidliu  <david-khala@hotmail.com>",
   "repository": {
     "type": "git",
@@ -8,8 +8,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "fabric-shim": "^1.4.4"
+    "fabric-shim": "^1.4.5"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
