--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "fabric-common-chaincode",
-  "version": "1.4.5-0.0.0",
+  "version": "1.4.5-0.1.0",
   "author": "davidliu  <david-khala@hotmail.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/davidkhala/fabric-common-chaincode-node.git"
   },
   "license": "Apache-2.0",
-  "dependencies": {
+  "devDependencies": {
     "fabric-shim": "^1.4.5"
-  },
-  "devDependencies": {}
+  }
 }
