--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "fabric-shim": "latest"
+  },
+  "devDependencies": {
+    "eslint": "latest"
   }
 }
