--- a/contract-api/package.json
+++ b/contract-api/package.json
@@ -1,11 +1,14 @@
 {
   "name": "khala-fabric-contract-api",
-  "version": "1.4.5-0.0.0",
+  "version": "1.4.6-0.0.1",
   "author": "davidliu  <david-khala@hotmail.com>",
   "repository": "davidkhala/fabric-common-chaincode-node",
   "license": "Apache-2.0",
   "dependencies": {
-    "fabric-contract-api": "^1.4.5",
-    "fabric-shim": "^1.4.5"
+    "fabric-contract-api": "latest-1.4",
+    "fabric-shim": "latest-1.4"
+  },
+  "publishConfig": {
+    "tag": "latest-1.4"
   }
 }
