--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "fabric-common-chaincode",
-  "version": "1.4.5-0.1.7",
+  "version": "1.4.6-0.0.0",
   "author": "davidliu  <david-khala@hotmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/davidkhala/fabric-common-chaincode-node.git"
-  },
+  "repository": "davidkhala/fabric-common-chaincode-node",
   "license": "Apache-2.0",
-  "devDependencies": {
-    "fabric-shim": "^1.4.5"
+  "dependencies": {
+    "fabric-shim": "latest-1.4"
+  },
+  "publishConfig": {
+    "tag": "latest-1.4"
   }
 }
